# ImagetoText

./: app.py  pyproject.toml  replit.nix
templates/: index.html  result.html
